# api-tests/src/test/resources/openapi.json
@@ -2011,13 +2011,6 @@
                 "properties": {
                   "data": {
                     "type": "string"
-                  },
-                  "qrPng": {
-                    "type": "string",
-                    "format": "binary"
-                  },
-                  "qrUrl": {
-                    "type": "string"
                   }
                 }
               }
